k8s/argocd/argocd-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tasklistapp-ingress
  namespace: tasklistapp
  annotations:
    kubernetes.io/ingress.class: nginx
    argocd.argoproj.io/sync-wave: "4"
spec:
  rules:
    - host: tasklistapp.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-service
                port:
                  number: 80
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: backend-service
                port:
                  number: 8080
